<resources>
    <string name="app_name">Belajar Kotlin</string>
    <string name="tvLength">Panjang</string>
    <string name="tvWidth">Lebar</string>
    <string name="tvHeight">Tinggi</string>
    <string name="tvResult">Hasil</string>
    <string name="actionResult">Hitung</string>

    <!--intent-->
    <string name="actionMoveToActivity">Pindah</string>
    <string name="actionMoveToActivityWithData">Pindah Dengan data</string>
    <string name="actionDialNumber">Dial Number</string>
    <string name="moveText">Telah Pindah</string>
    <string name="content_image_pixel">Google Pixel</string>


    <string name="content_text">Google officially announced its much-anticipated Pixel phones; the Pixel and Pixel XL, on October 4. We attended Google’s London UK event, mirroring the main one taking place in San Francisco, US, where the firm unwrapped the new Android 7.1 Nougat devices which will apparently usurp Google’s long-standing Nexus series.</string>
    <string name="content_specs_display">5.0 inches\n
    FHD AMOLED at 441ppi\n
    2.5D Corning® Gorilla® Glass 4</string>
    <string name="content_specs_size">5.6 x 2.7 x 0.2 ~ 0.3 inches 143.8 x 69.5 x 7.3 ~ 8.5 mm</string>
    <string name="content_specs_battery">2,770 mAh battery\n
    Standby time (LTE): up to 19 days\n
    Talk time (3g/WCDMA): up to 26 hours\n
    Internet use time (Wi-Fi): up to 13 hours\n
    Internet use time (LTE): up to 13 hours\n
    Video playback: up to 13 hours\n
    Audio playback (via headset): up to 110 hours\n
    Fast charging: up to 7 hours of use from only 15 minutes of charging</string>
    <string name="stock">Stock hanya 5 buah</string>
    <string name="specification">Spesifikasi</string>
    <string name="display">Display</string>
    <string name="size">Size</string>
    <string name="battery">Battery</string>
    <string name="seller">Dijual oleh</string>
    <string name="my_name">Narenda Wicaksono</string>
    <string name="buy">Beli</string>
    <string name="dummy_value">$735</string>
    <string name="dummy_photos">6 photos</string>
    <string name="tvHeroTitle">Nama Pahlawan</string>
    <string name="tvHeroDesc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
        ex ea commodo consequat.</string>
    <string name="imgPhoto">Photo</string>
    <string name="tvFavorite">Favorit</string>
    <string name="tvShare">Share</string>

<!--    menu-->
    <string name="menuList">List</string>
    <string name="menuGrid">Grid</string>
    <string name="menuCardView">CardView</string>
</resources>