<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zharfan.ViewViewGroupActivity">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/flImageInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/pixel_google"
                android:contentDescription="@string/content_image_pixel"/>

            <TextView
                style="@style/TextContent.Small.White"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/white"
                android:layout_gravity="bottom"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:background="#4D000000"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:text="@string/dummy_photos"
                android:drawableStart="@drawable/ic_collections_white_18dp"/>

        </FrameLayout>

        <TextView
            android:id="@+id/tvPrice"
            style="@style/TextContent"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/dummy_value"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/flImageInfo"/>

        <TextView
            android:id="@+id/tvStock"
            style="@style/TextContent.Subtitle"
            android:text="@string/stock"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPrice"/>

        <TextView
            android:id="@+id/tvContentInfo"
            style="@style/TextContent"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/content_text"
            app:layout_constraintTop_toBottomOf="@id/tvStock"
            app:layout_constraintStart_toStartOf="@id/tvPrice"/>

        <TextView
            android:id="@+id/tvSpesification"
            style="@style/TextContent.Subtitle"
            android:layout_marginTop="16dp"
            android:text="@string/specification"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvContentInfo"/>

        <TextView
            android:id="@+id/tvDisplay"
            style="@style/TextSpec.Field"
            android:text="@string/display"
            app:layout_constraintTop_toBottomOf="@id/tvSpesification"
            app:layout_constraintStart_toStartOf="@id/tvPrice"/>

        <TextView
            android:id="@+id/tvDisplayInfo"
            style="@style/TextSpec.Value"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/content_specs_display"
            app:layout_constraintStart_toEndOf="@id/tvDisplay"
            app:layout_constraintEnd_toEndOf="@id/tvContentInfo"
            app:layout_constraintTop_toTopOf="@id/tvDisplay"/>

        <TextView
            android:id="@+id/tvSize"
            style="@style/TextSpec.Field"
            android:layout_marginTop="4dp"
            android:text="@string/size"
            app:layout_constraintTop_toBottomOf="@id/tvDisplayInfo"
            app:layout_constraintStart_toStartOf="@id/tvPrice"/>

        <TextView
            android:id="@+id/tvSizeInfo"
            style="@style/TextSpec.Value"
            android:text="@string/content_specs_size"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="@id/tvDisplayInfo"
            app:layout_constraintEnd_toEndOf="@id/tvContentInfo"
            app:layout_constraintTop_toBottomOf="@id/tvSize"/>

        <TextView
            android:id="@+id/tvBattery"
            style="@style/TextSpec.Field"
            android:layout_marginTop="4dp"
            android:text="@string/battery"
            app:layout_constraintTop_toBottomOf="@id/tvSizeInfo"
            app:layout_constraintStart_toStartOf="@id/tvPrice"/>

        <TextView
            android:id="@+id/tvBatteryInfo"
            style="@style/TextSpec.Value"
            android:layout_marginEnd="16dp"
            android:text="@string/content_specs_battery"
            app:layout_constraintStart_toStartOf="@id/tvSizeInfo"
            app:layout_constraintStart_toEndOf="@id/tvContentInfo"
            app:layout_constraintTop_toTopOf="@id/tvBattery"/>

        <TextView
            android:id="@+id/tvSeller"
            style="@style/TextContent.Subtitle"
            android:layout_marginTop="16dp"
            android:text="@string/seller"
            app:layout_constraintTop_toBottomOf="@id/tvBatteryInfo"
            app:layout_constraintStart_toStartOf="parent"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgSeller"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/photo_2"
            app:layout_constraintTop_toBottomOf="@id/tvSeller"
            app:layout_constraintStart_toStartOf="@id/tvPrice"/>

        <TextView
            android:id="@+id/tvSellerName"
            style="@style/TextContent.Subtitle"
            android:layout_marginStart="8dp"
            android:text="@string/my_name"
            app:layout_constraintTop_toTopOf="@id/imgSeller"
            app:layout_constraintBottom_toBottomOf="@id/imgSeller"
            app:layout_constraintStart_toEndOf="@id/imgSeller"/>

        <Button
            android:id="@+id/btnBuy"
            style="@style/ButtonGeneral"
            android:layout_margin="12dp"
            android:text="@string/buy"
            android:textAllCaps="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgSeller"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
        


</ScrollView>