<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zharfan.intentActivity">
<!--Button-->
    <Button
        android:id="@+id/btnMoveToActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/actionMoveToActivity"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <Button
        android:id="@+id/btnMoveToActivityWithData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/actionMoveToActivityWithData"
        app:layout_constraintTop_toBottomOf="@id/btnMoveToActivity"
        app:layout_constraintStart_toStartOf="@id/btnMoveToActivity"
        app:layout_constraintEnd_toEndOf="@id/btnMoveToActivity"/>
    <Button
        android:id="@+id/btnDialNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/actionDialNumber"
        app:layout_constraintTop_toBottomOf="@id/btnMoveToActivityWithData"
        app:layout_constraintStart_toStartOf="@id/btnMoveToActivityWithData"
        app:layout_constraintEnd_toEndOf="@id/btnMoveToActivityWithData"/>

</androidx.constraintlayout.widget.ConstraintLayout>