<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="4dp"
    app:cardCornerRadius="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgItemPhoto"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_marginBottom="4dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/imgPhoto"
            tools:src="@tools:sample/avatars"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tvItemName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="@string/tvHeroTitle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/imgItemPhoto"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvItemDetail"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:ellipsize="end"
            android:maxLines="5"
            tools:text="@string/tvHeroDesc"
            app:layout_constraintTop_toBottomOf="@id/tvItemName"
            app:layout_constraintStart_toStartOf="@id/tvItemName"
            app:layout_constraintEnd_toEndOf="@id/tvItemName"/>

        <Button
            android:id="@+id/btnSetFavorite"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tvFavorite"
            android:textSize="12sp"
            android:textAllCaps="false"
            android:foreground="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintWidth_percent="0.28"
            app:layout_constraintBottom_toBottomOf="@id/imgItemPhoto"
            app:layout_constraintStart_toStartOf="@id/tvItemName"
            app:layout_constraintEnd_toStartOf="@id/btnSetShare"/>

        <Button
            android:id="@+id/btnSetShare"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tvShare"
            android:textSize="12sp"
            android:textAllCaps="false"
            android:foreground="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintWidth_percent="0.28"
            app:layout_constraintStart_toEndOf="@id/btnSetFavorite"
            app:layout_constraintTop_toTopOf="@id/btnSetFavorite"
            app:layout_constraintEnd_toEndOf="@id/tvItemName"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.cardview.widget.CardView>